# Nano-Code-Agent

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMUNICATION.md  CONTRIBUTING.md  DATA_MAP.md  Dockerfile  LICENSE  OPTIMIZATION_ROADMAP.md  PAGE_MAP.md  PROJECT_BRIEF.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  core_agent_lines.sh  docker-compose.yml  entrypoint.sh  hatch_build.py  pyproject.toml
.agent/: design.md  gotchas.md  security.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.pytest-tmp/: test_concurrent_writes_and_quecurrent  test_context_builder_injects_rcurrent  test_persist_and_loadcurrent  test_retriever_perfcurrent
.pytest-tmp/sessions/: test_checkpoint-resume-safe.jsonl
.pytest-tmp/test_concurrent_writes_and_que0/: retriever_index.json
.pytest-tmp/test_persist_and_load0/: idx.json
.pytest-tmp/test_retriever_perf0/: retriever_index.json
bridge/: package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
docs/: README.md  agent-social-network.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  configuration.md  deployment.md  image-generation.md  memory.md  multiple-instances.md  my-tool.md  openai-api.md  python-sdk.md  quick-start.md  websocket.md
nanobot/: __init__.py  __main__.py  nanobot.py
nanobot/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  memory_candidates.py  model_presets.py  progress_hook.py  retriever.py  runner.py  skills.py  subagent.py
nanobot/api/: __init__.py  server.py
nanobot/bus/: __init__.py  events.py  queue.py
nanobot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  qq.py  registry.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
nanobot/cli/: __init__.py  commands.py  models.py  onboard.py  stream.py
nanobot/command/: __init__.py  builtin.py  router.py
nanobot/config/: __init__.py  loader.py  paths.py  schema.py
nanobot/cron/: __init__.py  service.py  types.py
nanobot/heartbeat/: __init__.py  service.py
nanobot/pairing/: __init__.py  store.py
nanobot/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  bedrock_provider.py  factory.py  fallback_provider.py  github_copilot_provider.py  image_generation.py  openai_codex_provider.py  openai_compat_provider.py  registry.py
nanobot/security/: policy.py
nanobot/session/: __init__.py  goal_state.py  manager.py  webui_turns.py
nanobot/skills/: README.md
nanobot/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanobot/utils/: __init__.py  artifacts.py  document.py  evaluator.py  file_edit_events.py  gitstore.py  helpers.py  image_generation_intent.py  llm_runtime.py  logging_bridge.py  media_decode.py  path.py  progress_events.py  prompt_templates.py  restart.py  runtime.py  searchusage.py  subagent_channel_display.py  tool_hints.py
nanobot/web/: __init__.py
nanobot/webui/: __init__.py  settings_api.py  sidebar_state.py  thread_disk.py  transcript.py
tests/: test_api_attachment.py  test_api_memory_recover.py  test_api_stream.py  test_build_status.py  test_context_documents.py  test_docker.sh  test_document_parsing.py  test_msteams.py  test_nanobot_facade.py  test_openai_api.py  test_package_version.py  test_tool_contextvars.py  test_truncate_text_shadowing.py
tests/agent/: conftest.py  test_auto_compact.py  test_autocompact_unit.py  test_consolidate_offset.py  test_consolidation_ratio.py  test_consolidator.py  test_context_aware.py  test_context_builder.py  test_context_memory_snapshot.py  test_context_prompt_cache.py  test_context_retriever_integration.py  test_cursor_recovery.py  test_dream.py  test_dream_tools.py  test_evaluator.py  test_gemini_thought_signature.py  test_git_store.py  test_heartbeat_service.py  test_hook_composite.py  test_loop_consolidation_tokens.py  test_loop_cron_timezone.py  test_loop_goal_wall_timeout.py  test_loop_image_generation_media.py  test_loop_progress.py  test_loop_runner_integration.py  test_loop_save_turn.py  test_loop_tool_context.py  test_max_messages_config.py  test_mcp_connection.py  test_mcp_transient_retry.py  test_memory_candidates.py  test_memory_compaction_event.py  test_memory_retriever.py  (+32 more)
webui/: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts
(+272 files in other folders)
